--- a/ansible/pxe_setup.yml
+++ b/ansible/pxe_setup.yml
@@ -26,8 +26,18 @@
         name: ansible
         state: present
         update_cache: yes
+
+    - name: Read SSH public key
+      slurp:
+        src: "/home/forrest/.ssh/id_ed25519.pub"
+      register: ssh_public_key_slurp
+
+    - name: Set SSH public key fact
+      set_fact:
+        ssh_public_key: "{{ ssh_public_key_slurp['content'] | b64decode }}"
   roles:
     - common
+    - nfs_server
     - pxe_boot
     - nginx
     - dnsmasq
