--- a/ansible/roles/pxe_boot/tasks/main.yml
+++ b/ansible/roles/pxe_boot/tasks/main.yml
@@ -53,27 +53,25 @@
   args:
     creates: /srv/tftp/boot/grub/x86_64-efi/core.efi
 
-- name: Find the kernel image in the NFS root
-  find:
-    paths: /srv/nfs/ubuntu2204/boot
-    patterns: "vmlinuz-*"
-  register: kernel_find
+- name: Find the latest kernel image in the NFS root
+  shell: "ls -t /srv/nfs/ubuntu2204/boot/vmlinuz-* | head -n 1"
+  register: latest_kernel
+  changed_when: false
 
-- name: Find the initrd image in the NFS root
-  find:
-    paths: /srv/nfs/ubuntu2204/boot
-    patterns: "initrd.img-*"
-  register: initrd_find
+- name: Find the latest initrd image in the NFS root
+  shell: "ls -t /srv/nfs/ubuntu2204/boot/initrd.img-* | head -n 1"
+  register: latest_initrd
+  changed_when: false
 
 - name: Fail if kernel is not found
   fail:
     msg: "Could not find a kernel image in /srv/nfs/ubuntu2204/boot"
-  when: kernel_find.matched == 0
+  when: latest_kernel.stdout == ""
 
 - name: Fail if initrd is not found
   fail:
     msg: "Could not find an initrd image in /srv/nfs/ubuntu2204/boot"
-  when: initrd_find.matched == 0
+  when: latest_initrd.stdout == ""
 
 - name: Copy kernel and initrd from NFS root to TFTP directory
   copy:
@@ -82,14 +80,8 @@
     remote_src: yes
     mode: "0644"
   loop:
-    - {
-        src: "{{ kernel_find.files[0].path }}",
-        dest: "/srv/tftp/boot/grub/vmlinuz",
-      }
-    - {
-        src: "{{ initrd_find.files[0].path }}",
-        dest: "/srv/tftp/boot/grub/initrd",
-      }
+    - { src: "{{ latest_kernel.stdout }}", dest: "/srv/tftp/boot/grub/vmlinuz" }
+    - { src: "{{ latest_initrd.stdout }}", dest: "/srv/tftp/boot/grub/initrd" }
 
 - name: Check for SSH public key on control node
   stat:
