Functioning WOL and internet routing

--- a/ansible/configure_wol.yml
+++ b/ansible/configure_wol.yml
@@ -1,6 +1,6 @@
-- hosts: localhost
-  connection: local
+- hosts: compute
+  connection: ssh
   become: yes
   gather_facts: yes
   roles:
-    - wol
+    - networkd_wol
