--- a/ansible/control_configure.yml
+++ b/ansible/control_configure.yml
@@ -4,6 +4,7 @@
   become: yes
   vars_files:
     - vars/main.yml
+    - "hardware_vars/{{ hardware_version }}.yml"
   pre_tasks:
     - name: Check for passwordless sudo
       command: sudo -n true
