--- a/ansible/control_configure.yml
+++ b/ansible/control_configure.yml
@@ -39,6 +39,18 @@
   roles:
     - common
     - gateway
+
+- hosts: localhost
+  connection: local
+  become: yes
+  vars_files:
+    - vars/main.yml
+    - "hardware_vars/{{ hardware_version }}.yml"
+  tasks:
+    - name: Refresh network facts
+      setup:
+        filter: "ansible_network_resources"
+  roles:
     - nfs_server
     - pxe_boot
     - nginx
