--- a/ansible/control_configure.yml
+++ b/ansible/control_configure.yml
@@ -7,25 +7,12 @@
     - vars/main.yml
     - "hardware_vars/{{ hardware_version }}.yml"
   tasks:
-    - name: Set real user dir fact
-      set_fact:
-        real_user_dir: "{{ ansible_env.HOME }}"
-
-    - name: Read SSH public key
-      slurp:
-        src: "{{ real_user_dir }}/.ssh/id_ed25519.pub"
-      register: ssh_public_key_slurp
-
-    - name: Set SSH public key fact
-      set_fact:
-        ssh_public_key: "{{ ssh_public_key_slurp['content'] | b64decode }}"
-
     - name: Configure SSH client for compute nodes
       blockinfile:
-        path: "{{ real_user_dir }}/.ssh/config"
+        path: "{{ ansible_user_dir }}/.ssh/config"
         create: yes
-        owner: "{{ ansible_real_user_id }}"
-        group: "{{ ansible_real_group_id }}"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_gid }}"
         mode: 0600
         block: |
           {% for node in compute_nodes %}
@@ -87,10 +74,10 @@
   post_tasks:
     - name: Ensure remote directory exists
       file:
-        path: "{{ real_user_dir }}/remote/onedotzero"
+        path: "{{ ansible_user_dir }}/remote/onedotzero"
         state: directory
-        owner: "{{ ansible_real_user_id }}"
-        group: "{{ ansible_real_group_id }}"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_gid }}"
         mode: "0755"
 
     - name: Restart dnsmasq
