--- a/ansible/hardware_vars/0.1.yml
+++ b/ansible/hardware_vars/0.1.yml
@@ -17,7 +17,8 @@ compute_nodes:
       name: "compute1",
     }
 
-hardware_compute_configure_roles: []
+hardware_compute_configure_roles:
+  - "hardware_specific/intel_arc_drivers"
 
 hardware_golden_image_roles:
   - "hardware_specific/intel_arc_drivers"
