--- a/ansible/hardware_vars/0.1.yml
+++ b/ansible/hardware_vars/0.1.yml
@@ -18,12 +18,16 @@ compute_nodes:
     }
 
 hardware_compute_configure_roles:
-  - "hardware_specific/intel_oneapi"
+  - "hardware_specific/ipex_llm"
+
+hardware_control_configure_roles:
+  - "hardware_specific/ipex_llm"
 
 hardware_golden_image_roles:
   - "hardware_specific/intel_arc_drivers"
   - "hardware_specific/intel_oneapi"
 
 hardware_compute_test_roles:
+  - "hardware_specific/ipex_llm"
   - "hardware_specific/intel_arc_drivers"
   - "hardware_specific/intel_oneapi"
