added venv role

--- a/ansible/hardware_vars/0.1.yml
+++ b/ansible/hardware_vars/0.1.yml
@@ -17,11 +17,9 @@ compute_nodes:
       name: "compute1",
     }
 
-hardware_compute_configure_roles:
-  - "hardware_specific/ipex_llm"
+hardware_compute_configure_roles: []
 
-hardware_control_configure_roles:
-  - "hardware_specific/ipex_llm"
+hardware_control_configure_roles: []
 
 hardware_golden_image_roles:
   - "hardware_specific/intel_arc_drivers"
